package dynamicproxt;

public interface IStudent {
    String getName();
}
